--- a/doc/src/manual/ch-run-sim.tex
+++ b/doc/src/manual/ch-run-sim.tex
@@ -1087,12 +1087,12 @@ In case of nonstandard installation, it may be necessary to set the
 \fvar{OMNETPP\_TKENV\_DIR} environment variable so that Tkenv can find
 its parts written in Tcl script.
 
-\begin{sloppypar}
 The default path from where the icons are loaded can be changed with
 the \fvar{OMNETPP\_BITMAP\_PATH} variable, which is a
 semicolon-separated list of directories and defaults to
-\ttt{\textit{omnetpp-dir}/bitmaps;./bitmaps}.
-\end{sloppypar}
+\ttt{\textit{omnetpp-dir}/bitmaps;./bitmaps}. (See section
+\ref{sec:ch-graphics:icon library} as well).
+
 
 \subsubsection{Embedding Tcl code into the executable}
 
