*** empty log message ***

--- a/doc/src/manual/ch-graphics.tex
+++ b/doc/src/manual/ch-graphics.tex
@@ -352,6 +352,14 @@ by naming the subdirectory (subdirectories) as well:
 For compatibility, if the display string contains a icon without
 a category (i.e. subdirectory) name, {\opp} tries it as "old/icon" as well.
 
+If you create new or custom icons, you can put
+
+\subsection{Icon size}
+
+Icons come in various sizes: normal, large, small, very small. Sizes are
+encoded into the icon name's suffix: \ttt{\_l}, \ttt{\_s}, \ttt{\_vs}.
+In display strings, one can either use the suffix (\ttt{"i=device/router_l"}),
+or the \ttt{"is}" (\textit{icon size}) display string tag ("i=device/router;is=l").
 
 
 \section{GNED -- Graphical NED Editor}
