*** empty log message ***

--- a/doc/src/manual/ch-graphics.tex
+++ b/doc/src/manual/ch-graphics.tex
@@ -159,7 +159,7 @@ format (where \textit{r},\textit{g},\textit{b} are hex digits).
 Defaults: \textit{fillcolor}=\#8080ff (a lightblue), \textit{outlinecolor}=black,
 \textit{borderwidth}=2}\\\hline
 % ROW 11
-\tbf{i=}\textit{iconname},\textit{<color>},\textit{<percentage>}
+\tbf{i=}\textit{iconname},\textit{color},\textit{percentage}
 &
 {\raggedright Use the named icon. It can be colorized, and percentage
 specifies the amount of colorization.
