*** empty log message ***

--- a/doc/src/manual/ch-sim-lib.tex
+++ b/doc/src/manual/ch-sim-lib.tex
@@ -83,6 +83,7 @@ length = msg->length();
 
 
 \subsection{className()}
+\label{sec:sim-lib:classname}
 
 
 For each class, the \fname{className()} member function returns the class
@@ -94,6 +95,7 @@ const char *classname = msg->className(); // returns "cMessage"
 
 
 \subsection{Name attribute}
+\label{sec:sim-lib:name}
 
 An object can be assigned a \textit{name} (a character string). The name
 string is the first argument to the constructor of every class,
