--- a/doc/src/manual/ch-graphics.tex
+++ b/doc/src/manual/ch-graphics.tex
@@ -173,6 +173,23 @@ Defaults: \textit{iconname}: no default -- if no icon name is present, \textit{b
 \ttt{l}, \ttt{vl}, \ttt{s} and \ttt{vs} (for large, very large, small, very small).
 If this option is present, size cannot be included in the icon name (\ttt{"i="} tag)
 with the \ttt{"i=\textit{<iconname>}\_\textit{<size>}"} notation.}\\\hline
+%%
+\tbf{r=}\textit{radius},\textit{fillcolor},\textit{color},\textit{width}
+&
+{\raggedright Draws a circle (or a filled circle) around the submodule with
+the given radius. It can be used to visualize transmission range of
+wireless nodes.
+
+Defaults: \textit{radius}=100, \textit{fillcolor}=none, \textit{color}=black,
+\textit{width}=1 (unfilled black circle)}\\\hline
+%%
+\tbf{q=}\textit{queue-object-name}
+&
+{\raggedright Displays the queue length next to submodule icon.
+It expects a \cclass{cQueue} object's name (as set by the \fname{setName()}
+method, see section \ref{sec:sim-lib:name}). Tkenv will do a depth-first
+search to find the object, and it will find the queue object within submodules
+as well.}\\\hline
 
 \end{longtable}
 
