--- a/doc/src/manual/ch-run-sim.tex
+++ b/doc/src/manual/ch-run-sim.tex
@@ -1093,6 +1093,8 @@ semicolon-separated list of directories and defaults to
 \ttt{\textit{omnetpp-dir}/bitmaps;./bitmaps}. (See section
 \ref{sec:ch-graphics:icon library} as well).
 
+%FIXME TBD: section about Tkenv plugins, see ChangeLog 2003-11-07
+
 
 \subsubsection{Embedding Tcl code into the executable}
 
